--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "8c029d20-a0dc-494b-9514-9ec1de269412",
    "metadata": {
     "editable": true,
@@ -13,49 +13,26 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
-       "                (function() {\n",
-       "                    if (window.IPython === undefined) {\n",
-       "                        return\n",
-       "                    }\n",
-       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
-       "                        \"jupyter_black in a non-lab notebook with \" +\n",
-       "                        \"`is_lab=True`. Please double check, and if \" +\n",
-       "                        \"loading with `%load_ext` please review the README!\"\n",
-       "                    console.log(msg)\n",
-       "                    alert(msg)\n",
-       "                })()\n",
-       "                </script>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Repo path:   [E:\\_codes\\GPT-Paper]\n",
-      "Working dir: [E:\\_codes\\GPT-Paper\\notebook]\n",
-      "Now: [2023-09-17 05:29:55.663231]\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Repo path:   [C:\\_codes\\GPT-Paper]\n",
+      "Working dir: [C:\\_codes\\GPT-Paper\\notebook]\n",
+      "Now: [2023-09-18 21:02:27.965340]\n",
+      "20 queries after combined.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54329bb0e4554f6cb5a442d475a6674a",
+       "model_id": "e774d8a5b8fd40e2b3c53798afeb6869",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Button(description='Retrieve All', icon='wikipedia-w', layout=Layout(width='auto…"
+       "HBox(children=(VBox(children=(Output(), Output(layout=Layout(max_height='800px', overflow='auto'))), layout=La…"
       ]
      },
      "metadata": {},
@@ -64,12 +41,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4978b79aee71477182cd0ff7eafafc46",
+       "model_id": "1a201e851da14f7cbabdae2892890d34",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='0', layout=Layout(border_bottom='1px solid purple', b…"
+       "Textarea(value='', layout=Layout(width='auto'), placeholder='Type something')"
       ]
      },
      "metadata": {},
@@ -78,320 +55,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f30dcecfcc743e7a67bdf60938be5f2",
+       "model_id": "f0ee67604fdf4affa5843c87fa37813c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='1', layout=Layout(border_bottom='1px solid purple', b…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd4ed0c6fd234fb09ae125f7fe5fe5c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='1.1', layout=Layout(border_bottom='1px solid purple',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d357f20d0841470db3d55558d7f050bb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='1.2', layout=Layout(border_bottom='1px solid purple',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ca8baea5843494781872ef65c3be4fa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='1.3', layout=Layout(border_bottom='1px solid purple',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4a1936279264d5fb1713fda8853a16d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='2', layout=Layout(border_bottom='1px solid purple', b…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6373e785dce343db9d86e49196936473",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3', layout=Layout(border_bottom='1px solid purple', b…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc4dfff48897438ab4ac0238208d700a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1', layout=Layout(border_bottom='1px solid purple',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bef27e076af147ea9b1bf0d6ad9a9800",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1.1', layout=Layout(border_bottom='1px solid purple…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29867bd1def745f79cab57ff85a78ebd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1.2', layout=Layout(border_bottom='1px solid purple…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b819b1c8e0fb44f3b2ada2a3b04ac6b6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1.3', layout=Layout(border_bottom='1px solid purple…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "116449cdd888469a98c1b4725069423d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1.3.1', layout=Layout(border_bottom='1px solid purp…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5cbce0764dc741f7a38a6f7d40068897",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1.3.2', layout=Layout(border_bottom='1px solid purp…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c47399430444d6e8c3594d19fbae3ae",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1.4', layout=Layout(border_bottom='1px solid purple…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8abc90c4463348f0a26a6e0e2bd63fde",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1.4.1', layout=Layout(border_bottom='1px solid purp…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33c06158a0fd423eb4e51ec4ca3253df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.1.4.2', layout=Layout(border_bottom='1px solid purp…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c0eb88581bd94b2883d05d5189255f17",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.2', layout=Layout(border_bottom='1px solid purple',…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e81e3667077e40a4808e2665c6ccefba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.2.1', layout=Layout(border_bottom='1px solid purple…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "604e333ec3d946ad96977eb078d3aa19",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.2.1.1', layout=Layout(border_bottom='1px solid purp…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00b94734cf72485aab1c9f3f5e4b80fb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.2.1.2', layout=Layout(border_bottom='1px solid purp…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41f35ab8eeb846ce88988d2d831958a1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.2.1.3', layout=Layout(border_bottom='1px solid purp…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "222b45c4d9db4afbb31378ff882e7453",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.2.2', layout=Layout(border_bottom='1px solid purple…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94cab18e215b4f3cbd43ba157f3042dc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='3.2.3', layout=Layout(border_bottom='1px solid purple…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "342dd397724e402f954a45385ea80857",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(HTML(value='4', layout=Layout(border_bottom='1px solid purple', b…"
+       "HBox(children=(Button(description='Submit', layout=Layout(width='auto'), style=ButtonStyle()), Button(descript…"
       ]
      },
      "metadata": {},
@@ -406,7 +75,9 @@
     "# conversation_viewer = ConversationViewer()\n",
     "# display(conversation_viewer.output_widget)\n",
     "# conversation_viewer.display()\n",
-    "section_viewer_tree = SectionViewerTree(\"cancer_review\")"
+    "# section_viewer_tree = SectionViewerTree(\"cancer_review\")\n",
+    "reference_viewer = ReferenceViewer(\"cancer_review\")\n",
+    "reference_viewer.display()"
    ]
   },
   {
@@ -558,11 +229,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2399f322-38c1-4fd1-9119-56f20888c6cc",
+   "execution_count": 1,
+   "id": "0774f67e-d2fa-49b3-b774-f9d0414799e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac9296c845e84288b7e423a2717bb7cf",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Textarea(value='')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "display(widgets.Textarea())"
+   ]
   }
  ],
  "metadata": {
@@ -581,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
