[Feature] ReferenceViewer: send_query_button, and remove split button

--- a/notebook/review_writer.ipynb
+++ b/notebook/review_writer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8c029d20-a0dc-494b-9514-9ec1de269412",
    "metadata": {
     "editable": true,
@@ -11,7 +11,176 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
+       "                (function() {\n",
+       "                    if (window.IPython === undefined) {\n",
+       "                        return\n",
+       "                    }\n",
+       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
+       "                        \"jupyter_black in a non-lab notebook with \" +\n",
+       "                        \"`is_lab=True`. Please double check, and if \" +\n",
+       "                        \"loading with `%load_ext` please review the README!\"\n",
+       "                    console.log(msg)\n",
+       "                    alert(msg)\n",
+       "                })()\n",
+       "                </script>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Repo path:   [C:\\_codes\\GPT-Paper]\n",
+      "Working dir: [C:\\_codes\\GPT-Paper\\notebook]\n",
+      "Now: [2023-09-21 19:33:39.287358]\n",
+      "40 queries after combined.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fc44fb47248b4535b2d9f95192a27910",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Button(description='Toggle Layout (Chat + References)', layout=Layout(width='aut…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b5870beb8c84de2ba2c0cca12aeea3c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(description='Split paragraph', layout=Layout(width='auto'), style=ButtonStyle()),))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3d1e0dd0b9274813b4c7f56eee19257c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Textarea(value='', layout=Layout(max_height='400px', width='auto'), placeholder='Type something')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5ebcf157ff634e7bb0ba5ee9ee0e12fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(description='Submit', layout=Layout(width='auto'), style=ButtonStyle()), Button(descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "    let textareas = document.getElementsByTagName('textarea');\n",
+       "    for (const textarea of textareas) {\n",
+       "        textarea.style.resize = 'none';\n",
+       "        textarea.style.fontSize = '16px';\n",
+       "        textarea.style.lineHeight = '1.2';\n",
+       "        textarea.style.padding = '8px';\n",
+       "        textarea.style.fontFamily = 'Arial';\n",
+       "        textarea.setAttribute('rows', 2);\n",
+       "        textarea.setAttribute(\n",
+       "            'oninput',\n",
+       "            \"this.style.height = ''; this.style.height = this.scrollHeight + 3 + 'px'; console.log(this.scrollHeight);\"\n",
+       "        )\n",
+       "    }\n",
+       "    \n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "    let chatAnchorElements = document.querySelectorAll('chat-anchor');\n",
+       "\n",
+       "    function throttle(func, interval) {\n",
+       "        let lastCall = 0;\n",
+       "        return function() {\n",
+       "            let now = Date.now();\n",
+       "            if (now - lastCall >= interval) {\n",
+       "                lastCall = now;\n",
+       "                return func.apply(this, arguments);\n",
+       "            }\n",
+       "        };\n",
+       "    }\n",
+       "\n",
+       "    chatAnchorElements.forEach(function(chatAnchorElement) {\n",
+       "        let parentElement = chatAnchorElement.closest('.lm-Widget.lm-Panel.jupyter-widgets.widget-container.widget-box.widget-vbox');\n",
+       "\n",
+       "        if (parentElement) {\n",
+       "            console.log(\"Found parent:\", parentElement);\n",
+       "            let lastScrollHeight = parentElement.scrollHeight;\n",
+       "            let observer = new MutationObserver(throttle(function(mutations) {\n",
+       "                mutations.forEach(function(mutation) {\n",
+       "                    if (lastScrollHeight !== parentElement.scrollHeight) {\n",
+       "                        lastScrollHeight = parentElement.scrollHeight;\n",
+       "                        if (parentElement.scrollTop !== parentElement.scrollHeight) {\n",
+       "                            parentElement.scrollTop = parentElement.scrollHeight;\n",
+       "                        }\n",
+       "                    }\n",
+       "                });\n",
+       "            }, 800));\n",
+       "\n",
+       "            let config = { attributes: true, childList: true, subtree: true };\n",
+       "            observer.observe(parentElement, config);\n",
+       "        } else {\n",
+       "            console.log('No parent element with the class `lm-Widget jp-OutputArea` found.');\n",
+       "        }\n",
+       "    });\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
